// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`sku-webpack-plugin > build > should create valid app 1`] = `
===================================================================
--- sourceHtml
+++ clientHtml
@@ -1,24 +1,37 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
     <title>
       Webpack App
     </title>
     <meta
       name="viewport"
       content="width=device-width,initial-scale=1"
     >
     <script
       defer="defer"
       src="main.js"
     >
     </script>
     <link
       href="main.css"
       rel="stylesheet"
     >
   </head>
   <body>
+    <div>
+      <style type="text/css">
+        html,body{margin:0;padding:0;background:#fff}
+            html._198ihpd11,html._198ihpd11 body{color-scheme:dark;background:#1C2330}
+      </style>
+      <div class="_9ujh390 qasje910 qasje913">
+        <div class="_1syqt8p0 _198ihpd8s _198ihpd7o _198ihpdb0 _198ihpd9w _198ihpd5g _198ihpd6c _198ihpdic _198ihpd4k _198ihpd4d qasje910 qasje913 _198ihpd34 _198ihpd37">
+          <span class="_1syqt8p0 _198ihpd50 qasje90 qasje91 qasje91t qasje9a e739tz4">
+            Is it working?
+          </span>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
\\ No newline at end of file
`;

exports[`sku-webpack-plugin > build > should generate the expected files 1`] = `
{
  "index.html": "<!doctype html><html><head><meta charset="utf-8"><title>Webpack App</title><meta name="viewport" content="width=device-width,initial-scale=1"><script defer="defer" src="main.js"></script><link href="main.css" rel="stylesheet"></head><body></body></html>",
  "main.css": ._1syqt8p0 {
  border: 0;
  box-sizing: border-box;
  font-size: 100%;
  font: inherit;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  -webkit-tap-highlight-color: transparent;
}
._1syqt8p1 {
  display: block;
}
._1syqt8p2 {
  line-height: 1;
}
._1syqt8p3 {
  list-style: none;
}
._1syqt8p4 {
  quotes: none;
}
._1syqt8p4:after,
._1syqt8p4:before {
  content: "";
}
._1syqt8p5 {
  border-collapse: collapse;
  border-spacing: 0;
}
._1syqt8p6 {
  -webkit-appearance: none;
  appearance: none;
}
._1syqt8p7 {
  background-color: transparent;
}
._1syqt8p8 {
  outline: var(--_1cye5q710) solid transparent;
  transition: outline-color 0.125s ease;
}
._1syqt8p8:focus-visible {
  outline-color: var(--_1cye5q7m);
}
._1syqt8pa {
  color: inherit;
}
._1syqt8pb:disabled {
  opacity: 1;
}
._1syqt8pb::-ms-expand {
  display: none;
}
._1syqt8pd[type="number"] {
  -moz-appearance: textfield;
}
._1syqt8pd[type="number"]::-webkit-inner-spin-button,
._1syqt8pd[type="number"]::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}
._1syqt8pd::-ms-clear {
  display: none;
}
._1syqt8pd::-webkit-search-cancel-button {
  -webkit-appearance: none;
}
._1syqt8pg {
  color: inherit;
  text-decoration: none;
}
._198ihpd0 {
  overflow: hidden;
}
._198ihpd1 {
  overflow: scroll;
}
._198ihpd2 {
  overflow: visible;
}
._198ihpd3 {
  overflow: auto;
}
._198ihpd4 {
  -webkit-user-select: none;
  user-select: none;
}
._198ihpd5 {
  outline: none;
}
._198ihpd6 {
  outline: var(--_1cye5q710) solid transparent;
  transition: outline-color 0.125s ease;
}
._198ihpd6:focus-visible {
  outline-color: var(--_1cye5q7m);
}
._198ihpd7 {
  opacity: 0;
}
._198ihpd8 {
  z-index: 0;
}
._198ihpd9 {
  z-index: 1;
}
._198ihpda {
  z-index: 2;
}
._198ihpdb {
  z-index: 90;
}
._198ihpdc {
  z-index: 100;
}
._198ihpdd {
  z-index: 200;
}
._198ihpde {
  z-index: 290;
}
._198ihpdf {
  z-index: 300;
}
._198ihpdg {
  z-index: 400;
}
._198ihpdh {
  cursor: default;
}
._198ihpdi {
  cursor: pointer;
}
._198ihpdj {
  pointer-events: none;
}
._198ihpdk {
  top: 0;
}
._198ihpdl {
  bottom: 0;
}
._198ihpdm {
  left: 0;
}
._198ihpdn {
  right: 0;
}
._198ihpdo {
  height: 100%;
}
._198ihpdp {
  height: var(--_1cye5q79);
}
._198ihpdq {
  width: 100%;
}
._198ihpdr {
  width: var(--_1cye5q79);
}
._198ihpds {
  min-width: 0;
}
._198ihpdt {
  max-width: var(--_1cye5q711);
}
._198ihpdu {
  max-width: var(--_1cye5q712);
}
._198ihpdv {
  max-width: var(--_1cye5q713);
}
._198ihpdw {
  max-width: var(--_1cye5q714);
}
._198ihpdx {
  max-width: -moz-fit-content;
  max-width: fit-content;
}
._198ihpdy {
  transition: var(--_1cye5q75i);
}
._198ihpdz {
  transition: var(--_1cye5q75j);
}
._198ihpd10:active {
  transform: var(--_1cye5q75k);
}
html._198ihpd11 ._198ihpd13,
html:not(._198ihpd11) ._198ihpd12 {
  background: var(--_1cye5q71t);
}
html._198ihpd11 ._198ihpd15,
html:not(._198ihpd11) ._198ihpd14 {
  background: var(--_1cye5q71u);
}
html._198ihpd11 ._198ihpd17,
html:not(._198ihpd11) ._198ihpd16 {
  background: var(--_1cye5q71v);
}
html._198ihpd11 ._198ihpd19,
html:not(._198ihpd11) ._198ihpd18 {
  background: var(--_1cye5q71w);
}
html._198ihpd11 ._198ihpd1b,
html:not(._198ihpd11) ._198ihpd1a {
  background: var(--_1cye5q71x);
}
html._198ihpd11 ._198ihpd1d,
html:not(._198ihpd11) ._198ihpd1c {
  background: var(--_1cye5q71y);
}
html._198ihpd11 ._198ihpd1f,
html:not(._198ihpd11) ._198ihpd1e {
  background: var(--_1cye5q71z);
}
html._198ihpd11 ._198ihpd1h,
html:not(._198ihpd11) ._198ihpd1g {
  background: var(--_1cye5q720);
}
html._198ihpd11 ._198ihpd1j,
html:not(._198ihpd11) ._198ihpd1i {
  background: var(--_1cye5q721);
}
html._198ihpd11 ._198ihpd1l,
html:not(._198ihpd11) ._198ihpd1k {
  background: var(--_1cye5q722);
}
html._198ihpd11 ._198ihpd1n,
html:not(._198ihpd11) ._198ihpd1m {
  background: var(--_1cye5q723);
}
html._198ihpd11 ._198ihpd1p,
html:not(._198ihpd11) ._198ihpd1o {
  background: var(--_1cye5q724);
}
html._198ihpd11 ._198ihpd1r,
html:not(._198ihpd11) ._198ihpd1q {
  background: var(--_1cye5q725);
}
html._198ihpd11 ._198ihpd1t,
html:not(._198ihpd11) ._198ihpd1s {
  background: var(--_1cye5q726);
}
html._198ihpd11 ._198ihpd1v,
html:not(._198ihpd11) ._198ihpd1u {
  background: var(--_1cye5q727);
}
html._198ihpd11 ._198ihpd1x,
html:not(._198ihpd11) ._198ihpd1w {
  background: var(--_1cye5q728);
}
html._198ihpd11 ._198ihpd1z,
html:not(._198ihpd11) ._198ihpd1y {
  background: var(--_1cye5q729);
}
html._198ihpd11 ._198ihpd21,
html:not(._198ihpd11) ._198ihpd20 {
  background: var(--_1cye5q72a);
}
html._198ihpd11 ._198ihpd23,
html:not(._198ihpd11) ._198ihpd22 {
  background: var(--_1cye5q72b);
}
html._198ihpd11 ._198ihpd25,
html:not(._198ihpd11) ._198ihpd24 {
  background: var(--_1cye5q72c);
}
html._198ihpd11 ._198ihpd27,
html:not(._198ihpd11) ._198ihpd26 {
  background: var(--_1cye5q72d);
}
html._198ihpd11 ._198ihpd29,
html:not(._198ihpd11) ._198ihpd28 {
  background: var(--_1cye5q72e);
}
html._198ihpd11 ._198ihpd2b,
html:not(._198ihpd11) ._198ihpd2a {
  background: var(--_1cye5q72f);
}
html._198ihpd11 ._198ihpd2d,
html:not(._198ihpd11) ._198ihpd2c {
  background: var(--_1cye5q72g);
}
html._198ihpd11 ._198ihpd2f,
html:not(._198ihpd11) ._198ihpd2e {
  background: var(--_1cye5q72h);
}
html._198ihpd11 ._198ihpd2h,
html:not(._198ihpd11) ._198ihpd2g {
  background: var(--_1cye5q72i);
}
html._198ihpd11 ._198ihpd2j,
html:not(._198ihpd11) ._198ihpd2i {
  background: var(--_1cye5q72j);
}
html._198ihpd11 ._198ihpd2l,
html:not(._198ihpd11) ._198ihpd2k {
  background: var(--_1cye5q72k);
}
html._198ihpd11 ._198ihpd2n,
html:not(._198ihpd11) ._198ihpd2m {
  background: var(--_1cye5q72l);
}
html._198ihpd11 ._198ihpd2p,
html:not(._198ihpd11) ._198ihpd2o {
  background: var(--_1cye5q72m);
}
html._198ihpd11 ._198ihpd2r,
html:not(._198ihpd11) ._198ihpd2q {
  background: var(--_1cye5q72n);
}
html._198ihpd11 ._198ihpd2t,
html:not(._198ihpd11) ._198ihpd2s {
  background: var(--_1cye5q72o);
}
html._198ihpd11 ._198ihpd2v,
html:not(._198ihpd11) ._198ihpd2u {
  background: var(--_1cye5q72p);
}
html._198ihpd11 ._198ihpd2x,
html:not(._198ihpd11) ._198ihpd2w {
  background: var(--_1cye5q72q);
}
html._198ihpd11 ._198ihpd2z,
html:not(._198ihpd11) ._198ihpd2y {
  background: var(--_1cye5q72r);
}
html._198ihpd11 ._198ihpd31,
html:not(._198ihpd11) ._198ihpd30 {
  background: var(--_1cye5q72s);
}
html._198ihpd11 ._198ihpd33,
html:not(._198ihpd11) ._198ihpd32 {
  background: var(--_1cye5q72t);
}
html._198ihpd11 ._198ihpd35,
html:not(._198ihpd11) ._198ihpd34 {
  background: var(--_1cye5q72u);
}
html._198ihpd11 ._198ihpd37,
html:not(._198ihpd11) ._198ihpd36 {
  background: var(--_1cye5q72v);
}
html._198ihpd11 ._198ihpd39,
html:not(._198ihpd11) ._198ihpd38 {
  box-shadow: var(--_1cye5q75l);
}
html._198ihpd11 ._198ihpd3b,
html:not(._198ihpd11) ._198ihpd3a {
  box-shadow: var(--_1cye5q75m);
}
html._198ihpd11 ._198ihpd3d,
html:not(._198ihpd11) ._198ihpd3c {
  box-shadow: var(--_1cye5q75n);
}
html._198ihpd11 ._198ihpd3f,
html:not(._198ihpd11) ._198ihpd3e {
  box-shadow: inset 0 0 0 var(--_1cye5q7y) var(--_1cye5q7f);
}
html._198ihpd11 ._198ihpd3h,
html:not(._198ihpd11) ._198ihpd3g {
  box-shadow: inset 0 0 0 var(--_1cye5q7y) var(--_1cye5q7g);
}
html._198ihpd11 ._198ihpd3j,
html:not(._198ihpd11) ._198ihpd3i {
  box-shadow: inset 0 0 0 var(--_1cye5q7z) var(--_1cye5q7f);
}
html._198ihpd11 ._198ihpd3l,
html:not(._198ihpd11) ._198ihpd3k {
  box-shadow: inset 0 0 0 var(--_1cye5q7z) var(--_1cye5q7g);
}
html._198ihpd11 ._198ihpd3n,
html:not(._198ihpd11) ._198ihpd3m {
  box-shadow: inset 0 0 0 var(--_1cye5q7y) var(--_1cye5q7h);
}
html._198ihpd11 ._198ihpd3p,
html:not(._198ihpd11) ._198ihpd3o {
  box-shadow: inset 0 0 0 var(--_1cye5q7y) var(--_1cye5q7i);
}
html._198ihpd11 ._198ihpd3r,
html:not(._198ihpd11) ._198ihpd3q {
  box-shadow: inset 0 0 0 var(--_1cye5q7y) var(--_1cye5q7j);
}
html._198ihpd11 ._198ihpd3t,
html:not(._198ihpd11) ._198ihpd3s {
  box-shadow: inset 0 0 0 var(--_1cye5q7z) var(--_1cye5q7j);
}
html._198ihpd11 ._198ihpd3v,
html:not(._198ihpd11) ._198ihpd3u {
  box-shadow: inset 0 0 0 var(--_1cye5q7y) var(--_1cye5q7k);
}
html._198ihpd11 ._198ihpd3x,
html:not(._198ihpd11) ._198ihpd3w {
  box-shadow: inset 0 0 0 var(--_1cye5q7z) var(--_1cye5q7k);
}
html._198ihpd11 ._198ihpd3z,
html:not(._198ihpd11) ._198ihpd3y {
  box-shadow: inset 0 0 0 var(--_1cye5q7y) var(--_1cye5q7l);
}
html._198ihpd11 ._198ihpd41,
html:not(._198ihpd11) ._198ihpd40 {
  box-shadow: inset 0 0 0 var(--_1cye5q7y) var(--_1cye5q7n);
}
html._198ihpd11 ._198ihpd43,
html:not(._198ihpd11) ._198ihpd42 {
  box-shadow: inset 0 0 0 var(--_1cye5q7z) var(--_1cye5q7n);
}
html._198ihpd11 ._198ihpd45,
html:not(._198ihpd11) ._198ihpd44 {
  box-shadow: inset 0 0 0 var(--_1cye5q7y) var(--_1cye5q7o);
}
html._198ihpd11 ._198ihpd47,
html:not(._198ihpd11) ._198ihpd46 {
  box-shadow: inset 0 0 0 var(--_1cye5q7z) var(--_1cye5q7o);
}
html._198ihpd11 ._198ihpd49,
html:not(._198ihpd11) ._198ihpd48 {
  box-shadow: inset 0 0 0 var(--_1cye5q7y) var(--_1cye5q7p);
}
html._198ihpd11 ._198ihpd4b,
html:not(._198ihpd11) ._198ihpd4a {
  box-shadow: inset 0 0 0 var(--_1cye5q7y) var(--_1cye5q7q);
}
html._198ihpd11 ._198ihpd4d,
html:not(._198ihpd11) ._198ihpd4c {
  box-shadow: inset 0 0 0 var(--_1cye5q7y) var(--_1cye5q7r);
}
html._198ihpd11 ._198ihpd4f,
html:not(._198ihpd11) ._198ihpd4e {
  box-shadow: inset 0 0 0 var(--_1cye5q7z) var(--_1cye5q7r);
}
html._198ihpd11 ._198ihpd4h,
html:not(._198ihpd11) ._198ihpd4g {
  box-shadow: inset 0 0 0 var(--_1cye5q7y) var(--_1cye5q7s);
}
html._198ihpd11 ._198ihpd4j,
html:not(._198ihpd11) ._198ihpd4i {
  box-shadow: inset 0 0 0 var(--_1cye5q7z) var(--_1cye5q7s);
}
html._198ihpd11 ._198ihpd4l,
html:not(._198ihpd11) ._198ihpd4k {
  box-shadow: inset 0 0 0 var(--_1cye5q7y) var(--_1cye5q7t);
}
html._198ihpd11 ._198ihpd4n,
html:not(._198ihpd11) ._198ihpd4m {
  box-shadow: inset 0 0 0 var(--_1cye5q7y) var(--_1cye5q7u);
}
html._198ihpd11 ._198ihpd4p,
html:not(._198ihpd11) ._198ihpd4o {
  box-shadow: inset 0 0 0 var(--_1cye5q7y) var(--_1cye5q7v);
}
html._198ihpd11 ._198ihpd4r,
html:not(._198ihpd11) ._198ihpd4q {
  box-shadow: inset 0 0 0 var(--_1cye5q7y) var(--_1cye5q7w);
}
html._198ihpd11 ._198ihpd4t,
html:not(._198ihpd11) ._198ihpd4s {
  box-shadow: inset 0 0 0 var(--_1cye5q7y) var(--_1cye5q7x);
}
html._198ihpd11 ._198ihpd4v,
html:not(._198ihpd11) ._198ihpd4u {
  box-shadow: 0 0 0 var(--_1cye5q710) var(--_1cye5q7m);
}
._198ihpd4w {
  display: none;
}
._198ihpd50 {
  display: block;
}
._198ihpd54 {
  display: inline;
}
._198ihpd58 {
  display: inline-block;
}
._198ihpd5c {
  display: flex;
}
._198ihpd5g {
  position: relative;
}
._198ihpd5k {
  position: absolute;
}
._198ihpd5o {
  position: fixed;
}
._198ihpd5s {
  position: sticky;
}
._198ihpd5w {
  border-radius: 0;
}
._198ihpd60 {
  border-radius: 9999px;
}
._198ihpd64 {
  border-radius: var(--_1cye5q7b);
}
._198ihpd68 {
  border-radius: var(--_1cye5q7c);
}
._198ihpd6c {
  border-radius: var(--_1cye5q7d);
}
._198ihpd6g {
  border-radius: var(--_1cye5q7e);
}
._198ihpd6k {
  gap: var(--_1cye5q70);
}
._198ihpd6o {
  gap: var(--_1cye5q71);
}
._198ihpd6s {
  gap: var(--_1cye5q72);
}
._198ihpd6w {
  gap: var(--_1cye5q73);
}
._198ihpd70 {
  gap: var(--_1cye5q74);
}
._198ihpd74 {
  gap: var(--_1cye5q75);
}
._198ihpd78 {
  gap: var(--_1cye5q76);
}
._198ihpd7c {
  gap: var(--_1cye5q77);
}
._198ihpd7g {
  gap: var(--_1cye5q78);
}
._198ihpd7k {
  gap: 0;
}
._198ihpd7o {
  padding-top: var(--_1cye5q70);
}
._198ihpd7s {
  padding-top: var(--_1cye5q71);
}
._198ihpd7w {
  padding-top: var(--_1cye5q72);
}
._198ihpd80 {
  padding-top: var(--_1cye5q73);
}
._198ihpd84 {
  padding-top: var(--_1cye5q74);
}
._198ihpd88 {
  padding-top: var(--_1cye5q75);
}
._198ihpd8c {
  padding-top: var(--_1cye5q76);
}
._198ihpd8g {
  padding-top: var(--_1cye5q77);
}
._198ihpd8k {
  padding-top: var(--_1cye5q78);
}
._198ihpd8o {
  padding-top: 0;
}
._198ihpd8s {
  padding-bottom: var(--_1cye5q70);
}
._198ihpd8w {
  padding-bottom: var(--_1cye5q71);
}
._198ihpd90 {
  padding-bottom: var(--_1cye5q72);
}
._198ihpd94 {
  padding-bottom: var(--_1cye5q73);
}
._198ihpd98 {
  padding-bottom: var(--_1cye5q74);
}
._198ihpd9c {
  padding-bottom: var(--_1cye5q75);
}
._198ihpd9g {
  padding-bottom: var(--_1cye5q76);
}
._198ihpd9k {
  padding-bottom: var(--_1cye5q77);
}
._198ihpd9o {
  padding-bottom: var(--_1cye5q78);
}
._198ihpd9s {
  padding-bottom: 0;
}
._198ihpd9w {
  padding-right: var(--_1cye5q70);
}
._198ihpda0 {
  padding-right: var(--_1cye5q71);
}
._198ihpda4 {
  padding-right: var(--_1cye5q72);
}
._198ihpda8 {
  padding-right: var(--_1cye5q73);
}
._198ihpdac {
  padding-right: var(--_1cye5q74);
}
._198ihpdag {
  padding-right: var(--_1cye5q75);
}
._198ihpdak {
  padding-right: var(--_1cye5q76);
}
._198ihpdao {
  padding-right: var(--_1cye5q77);
}
._198ihpdas {
  padding-right: var(--_1cye5q78);
}
._198ihpdaw {
  padding-right: 0;
}
._198ihpdb0 {
  padding-left: var(--_1cye5q70);
}
._198ihpdb4 {
  padding-left: var(--_1cye5q71);
}
._198ihpdb8 {
  padding-left: var(--_1cye5q72);
}
._198ihpdbc {
  padding-left: var(--_1cye5q73);
}
._198ihpdbg {
  padding-left: var(--_1cye5q74);
}
._198ihpdbk {
  padding-left: var(--_1cye5q75);
}
._198ihpdbo {
  padding-left: var(--_1cye5q76);
}
._198ihpdbs {
  padding-left: var(--_1cye5q77);
}
._198ihpdbw {
  padding-left: var(--_1cye5q78);
}
._198ihpdc0 {
  padding-left: 0;
}
._198ihpdc4 {
  margin-top: var(--_1cye5q70);
}
._198ihpdc8 {
  margin-top: var(--_1cye5q71);
}
._198ihpdcc {
  margin-top: var(--_1cye5q72);
}
._198ihpdcg {
  margin-top: var(--_1cye5q73);
}
._198ihpdck {
  margin-top: var(--_1cye5q74);
}
._198ihpdco {
  margin-top: var(--_1cye5q75);
}
._198ihpdcs {
  margin-top: var(--_1cye5q76);
}
._198ihpdcw {
  margin-top: var(--_1cye5q77);
}
._198ihpdd0 {
  margin-top: var(--_1cye5q78);
}
._198ihpdd4 {
  margin-top: 0;
}
._198ihpdd8 {
  margin-bottom: var(--_1cye5q70);
}
._198ihpddc {
  margin-bottom: var(--_1cye5q71);
}
._198ihpddg {
  margin-bottom: var(--_1cye5q72);
}
._198ihpddk {
  margin-bottom: var(--_1cye5q73);
}
._198ihpddo {
  margin-bottom: var(--_1cye5q74);
}
._198ihpdds {
  margin-bottom: var(--_1cye5q75);
}
._198ihpddw {
  margin-bottom: var(--_1cye5q76);
}
._198ihpde0 {
  margin-bottom: var(--_1cye5q77);
}
._198ihpde4 {
  margin-bottom: var(--_1cye5q78);
}
._198ihpde8 {
  margin-bottom: 0;
}
._198ihpdec {
  margin-right: var(--_1cye5q70);
}
._198ihpdeg {
  margin-right: var(--_1cye5q71);
}
._198ihpdek {
  margin-right: var(--_1cye5q72);
}
._198ihpdeo {
  margin-right: var(--_1cye5q73);
}
._198ihpdes {
  margin-right: var(--_1cye5q74);
}
._198ihpdew {
  margin-right: var(--_1cye5q75);
}
._198ihpdf0 {
  margin-right: var(--_1cye5q76);
}
._198ihpdf4 {
  margin-right: var(--_1cye5q77);
}
._198ihpdf8 {
  margin-right: var(--_1cye5q78);
}
._198ihpdfc {
  margin-right: 0;
}
._198ihpdfg {
  margin-left: var(--_1cye5q70);
}
._198ihpdfk {
  margin-left: var(--_1cye5q71);
}
._198ihpdfo {
  margin-left: var(--_1cye5q72);
}
._198ihpdfs {
  margin-left: var(--_1cye5q73);
}
._198ihpdfw {
  margin-left: var(--_1cye5q74);
}
._198ihpdg0 {
  margin-left: var(--_1cye5q75);
}
._198ihpdg4 {
  margin-left: var(--_1cye5q76);
}
._198ihpdg8 {
  margin-left: var(--_1cye5q77);
}
._198ihpdgc {
  margin-left: var(--_1cye5q78);
}
._198ihpdgg {
  margin-left: 0;
}
._198ihpdgk {
  align-items: flex-start;
}
._198ihpdgo {
  align-items: center;
}
._198ihpdgs {
  align-items: flex-end;
}
._198ihpdgw {
  justify-content: flex-start;
}
._198ihpdh0 {
  justify-content: center;
}
._198ihpdh4 {
  justify-content: flex-end;
}
._198ihpdh8 {
  justify-content: space-between;
}
._198ihpdhc {
  flex-direction: row;
}
._198ihpdhg {
  flex-direction: row-reverse;
}
._198ihpdhk {
  flex-direction: column;
}
._198ihpdho {
  flex-direction: column-reverse;
}
._198ihpdhs {
  flex-wrap: wrap;
}
._198ihpdhw {
  flex-wrap: nowrap;
}
._198ihpdi0 {
  flex-shrink: 0;
}
._198ihpdi4 {
  flex-grow: 0;
}
._198ihpdi8 {
  flex-grow: 1;
}
._198ihpdic {
  text-align: left;
}
._198ihpdig {
  text-align: center;
}
._198ihpdik {
  text-align: right;
}
@media screen and (min-width: 740px) {
  ._198ihpd4x {
    display: none;
  }
  ._198ihpd51 {
    display: block;
  }
  ._198ihpd55 {
    display: inline;
  }
  ._198ihpd59 {
    display: inline-block;
  }
  ._198ihpd5d {
    display: flex;
  }
  ._198ihpd5h {
    position: relative;
  }
  ._198ihpd5l {
    position: absolute;
  }
  ._198ihpd5p {
    position: fixed;
  }
  ._198ihpd5t {
    position: sticky;
  }
  ._198ihpd5x {
    border-radius: 0;
  }
  ._198ihpd61 {
    border-radius: 9999px;
  }
  ._198ihpd65 {
    border-radius: var(--_1cye5q7b);
  }
  ._198ihpd69 {
    border-radius: var(--_1cye5q7c);
  }
  ._198ihpd6d {
    border-radius: var(--_1cye5q7d);
  }
  ._198ihpd6h {
    border-radius: var(--_1cye5q7e);
  }
  ._198ihpd6l {
    gap: var(--_1cye5q70);
  }
  ._198ihpd6p {
    gap: var(--_1cye5q71);
  }
  ._198ihpd6t {
    gap: var(--_1cye5q72);
  }
  ._198ihpd6x {
    gap: var(--_1cye5q73);
  }
  ._198ihpd71 {
    gap: var(--_1cye5q74);
  }
  ._198ihpd75 {
    gap: var(--_1cye5q75);
  }
  ._198ihpd79 {
    gap: var(--_1cye5q76);
  }
  ._198ihpd7d {
    gap: var(--_1cye5q77);
  }
  ._198ihpd7h {
    gap: var(--_1cye5q78);
  }
  ._198ihpd7l {
    gap: 0;
  }
  ._198ihpd7p {
    padding-top: var(--_1cye5q70);
  }
  ._198ihpd7t {
    padding-top: var(--_1cye5q71);
  }
  ._198ihpd7x {
    padding-top: var(--_1cye5q72);
  }
  ._198ihpd81 {
    padding-top: var(--_1cye5q73);
  }
  ._198ihpd85 {
    padding-top: var(--_1cye5q74);
  }
  ._198ihpd89 {
    padding-top: var(--_1cye5q75);
  }
  ._198ihpd8d {
    padding-top: var(--_1cye5q76);
  }
  ._198ihpd8h {
    padding-top: var(--_1cye5q77);
  }
  ._198ihpd8l {
    padding-top: var(--_1cye5q78);
  }
  ._198ihpd8p {
    padding-top: 0;
  }
  ._198ihpd8t {
    padding-bottom: var(--_1cye5q70);
  }
  ._198ihpd8x {
    padding-bottom: var(--_1cye5q71);
  }
  ._198ihpd91 {
    padding-bottom: var(--_1cye5q72);
  }
  ._198ihpd95 {
    padding-bottom: var(--_1cye5q73);
  }
  ._198ihpd99 {
    padding-bottom: var(--_1cye5q74);
  }
  ._198ihpd9d {
    padding-bottom: var(--_1cye5q75);
  }
  ._198ihpd9h {
    padding-bottom: var(--_1cye5q76);
  }
  ._198ihpd9l {
    padding-bottom: var(--_1cye5q77);
  }
  ._198ihpd9p {
    padding-bottom: var(--_1cye5q78);
  }
  ._198ihpd9t {
    padding-bottom: 0;
  }
  ._198ihpd9x {
    padding-right: var(--_1cye5q70);
  }
  ._198ihpda1 {
    padding-right: var(--_1cye5q71);
  }
  ._198ihpda5 {
    padding-right: var(--_1cye5q72);
  }
  ._198ihpda9 {
    padding-right: var(--_1cye5q73);
  }
  ._198ihpdad {
    padding-right: var(--_1cye5q74);
  }
  ._198ihpdah {
    padding-right: var(--_1cye5q75);
  }
  ._198ihpdal {
    padding-right: var(--_1cye5q76);
  }
  ._198ihpdap {
    padding-right: var(--_1cye5q77);
  }
  ._198ihpdat {
    padding-right: var(--_1cye5q78);
  }
  ._198ihpdax {
    padding-right: 0;
  }
  ._198ihpdb1 {
    padding-left: var(--_1cye5q70);
  }
  ._198ihpdb5 {
    padding-left: var(--_1cye5q71);
  }
  ._198ihpdb9 {
    padding-left: var(--_1cye5q72);
  }
  ._198ihpdbd {
    padding-left: var(--_1cye5q73);
  }
  ._198ihpdbh {
    padding-left: var(--_1cye5q74);
  }
  ._198ihpdbl {
    padding-left: var(--_1cye5q75);
  }
  ._198ihpdbp {
    padding-left: var(--_1cye5q76);
  }
  ._198ihpdbt {
    padding-left: var(--_1cye5q77);
  }
  ._198ihpdbx {
    padding-left: var(--_1cye5q78);
  }
  ._198ihpdc1 {
    padding-left: 0;
  }
  ._198ihpdc5 {
    margin-top: var(--_1cye5q70);
  }
  ._198ihpdc9 {
    margin-top: var(--_1cye5q71);
  }
  ._198ihpdcd {
    margin-top: var(--_1cye5q72);
  }
  ._198ihpdch {
    margin-top: var(--_1cye5q73);
  }
  ._198ihpdcl {
    margin-top: var(--_1cye5q74);
  }
  ._198ihpdcp {
    margin-top: var(--_1cye5q75);
  }
  ._198ihpdct {
    margin-top: var(--_1cye5q76);
  }
  ._198ihpdcx {
    margin-top: var(--_1cye5q77);
  }
  ._198ihpdd1 {
    margin-top: var(--_1cye5q78);
  }
  ._198ihpdd5 {
    margin-top: 0;
  }
  ._198ihpdd9 {
    margin-bottom: var(--_1cye5q70);
  }
  ._198ihpddd {
    margin-bottom: var(--_1cye5q71);
  }
  ._198ihpddh {
    margin-bottom: var(--_1cye5q72);
  }
  ._198ihpddl {
    margin-bottom: var(--_1cye5q73);
  }
  ._198ihpddp {
    margin-bottom: var(--_1cye5q74);
  }
  ._198ihpddt {
    margin-bottom: var(--_1cye5q75);
  }
  ._198ihpddx {
    margin-bottom: var(--_1cye5q76);
  }
  ._198ihpde1 {
    margin-bottom: var(--_1cye5q77);
  }
  ._198ihpde5 {
    margin-bottom: var(--_1cye5q78);
  }
  ._198ihpde9 {
    margin-bottom: 0;
  }
  ._198ihpded {
    margin-right: var(--_1cye5q70);
  }
  ._198ihpdeh {
    margin-right: var(--_1cye5q71);
  }
  ._198ihpdel {
    margin-right: var(--_1cye5q72);
  }
  ._198ihpdep {
    margin-right: var(--_1cye5q73);
  }
  ._198ihpdet {
    margin-right: var(--_1cye5q74);
  }
  ._198ihpdex {
    margin-right: var(--_1cye5q75);
  }
  ._198ihpdf1 {
    margin-right: var(--_1cye5q76);
  }
  ._198ihpdf5 {
    margin-right: var(--_1cye5q77);
  }
  ._198ihpdf9 {
    margin-right: var(--_1cye5q78);
  }
  ._198ihpdfd {
    margin-right: 0;
  }
  ._198ihpdfh {
    margin-left: var(--_1cye5q70);
  }
  ._198ihpdfl {
    margin-left: var(--_1cye5q71);
  }
  ._198ihpdfp {
    margin-left: var(--_1cye5q72);
  }
  ._198ihpdft {
    margin-left: var(--_1cye5q73);
  }
  ._198ihpdfx {
    margin-left: var(--_1cye5q74);
  }
  ._198ihpdg1 {
    margin-left: var(--_1cye5q75);
  }
  ._198ihpdg5 {
    margin-left: var(--_1cye5q76);
  }
  ._198ihpdg9 {
    margin-left: var(--_1cye5q77);
  }
  ._198ihpdgd {
    margin-left: var(--_1cye5q78);
  }
  ._198ihpdgh {
    margin-left: 0;
  }
  ._198ihpdgl {
    align-items: flex-start;
  }
  ._198ihpdgp {
    align-items: center;
  }
  ._198ihpdgt {
    align-items: flex-end;
  }
  ._198ihpdgx {
    justify-content: flex-start;
  }
  ._198ihpdh1 {
    justify-content: center;
  }
  ._198ihpdh5 {
    justify-content: flex-end;
  }
  ._198ihpdh9 {
    justify-content: space-between;
  }
  ._198ihpdhd {
    flex-direction: row;
  }
  ._198ihpdhh {
    flex-direction: row-reverse;
  }
  ._198ihpdhl {
    flex-direction: column;
  }
  ._198ihpdhp {
    flex-direction: column-reverse;
  }
  ._198ihpdht {
    flex-wrap: wrap;
  }
  ._198ihpdhx {
    flex-wrap: nowrap;
  }
  ._198ihpdi1 {
    flex-shrink: 0;
  }
  ._198ihpdi5 {
    flex-grow: 0;
  }
  ._198ihpdi9 {
    flex-grow: 1;
  }
  ._198ihpdid {
    text-align: left;
  }
  ._198ihpdih {
    text-align: center;
  }
  ._198ihpdil {
    text-align: right;
  }
}
@media screen and (min-width: 992px) {
  ._198ihpd4y {
    display: none;
  }
  ._198ihpd52 {
    display: block;
  }
  ._198ihpd56 {
    display: inline;
  }
  ._198ihpd5a {
    display: inline-block;
  }
  ._198ihpd5e {
    display: flex;
  }
  ._198ihpd5i {
    position: relative;
  }
  ._198ihpd5m {
    position: absolute;
  }
  ._198ihpd5q {
    position: fixed;
  }
  ._198ihpd5u {
    position: sticky;
  }
  ._198ihpd5y {
    border-radius: 0;
  }
  ._198ihpd62 {
    border-radius: 9999px;
  }
  ._198ihpd66 {
    border-radius: var(--_1cye5q7b);
  }
  ._198ihpd6a {
    border-radius: var(--_1cye5q7c);
  }
  ._198ihpd6e {
    border-radius: var(--_1cye5q7d);
  }
  ._198ihpd6i {
    border-radius: var(--_1cye5q7e);
  }
  ._198ihpd6m {
    gap: var(--_1cye5q70);
  }
  ._198ihpd6q {
    gap: var(--_1cye5q71);
  }
  ._198ihpd6u {
    gap: var(--_1cye5q72);
  }
  ._198ihpd6y {
    gap: var(--_1cye5q73);
  }
  ._198ihpd72 {
    gap: var(--_1cye5q74);
  }
  ._198ihpd76 {
    gap: var(--_1cye5q75);
  }
  ._198ihpd7a {
    gap: var(--_1cye5q76);
  }
  ._198ihpd7e {
    gap: var(--_1cye5q77);
  }
  ._198ihpd7i {
    gap: var(--_1cye5q78);
  }
  ._198ihpd7m {
    gap: 0;
  }
  ._198ihpd7q {
    padding-top: var(--_1cye5q70);
  }
  ._198ihpd7u {
    padding-top: var(--_1cye5q71);
  }
  ._198ihpd7y {
    padding-top: var(--_1cye5q72);
  }
  ._198ihpd82 {
    padding-top: var(--_1cye5q73);
  }
  ._198ihpd86 {
    padding-top: var(--_1cye5q74);
  }
  ._198ihpd8a {
    padding-top: var(--_1cye5q75);
  }
  ._198ihpd8e {
    padding-top: var(--_1cye5q76);
  }
  ._198ihpd8i {
    padding-top: var(--_1cye5q77);
  }
  ._198ihpd8m {
    padding-top: var(--_1cye5q78);
  }
  ._198ihpd8q {
    padding-top: 0;
  }
  ._198ihpd8u {
    padding-bottom: var(--_1cye5q70);
  }
  ._198ihpd8y {
    padding-bottom: var(--_1cye5q71);
  }
  ._198ihpd92 {
    padding-bottom: var(--_1cye5q72);
  }
  ._198ihpd96 {
    padding-bottom: var(--_1cye5q73);
  }
  ._198ihpd9a {
    padding-bottom: var(--_1cye5q74);
  }
  ._198ihpd9e {
    padding-bottom: var(--_1cye5q75);
  }
  ._198ihpd9i {
    padding-bottom: var(--_1cye5q76);
  }
  ._198ihpd9m {
    padding-bottom: var(--_1cye5q77);
  }
  ._198ihpd9q {
    padding-bottom: var(--_1cye5q78);
  }
  ._198ihpd9u {
    padding-bottom: 0;
  }
  ._198ihpd9y {
    padding-right: var(--_1cye5q70);
  }
  ._198ihpda2 {
    padding-right: var(--_1cye5q71);
  }
  ._198ihpda6 {
    padding-right: var(--_1cye5q72);
  }
  ._198ihpdaa {
    padding-right: var(--_1cye5q73);
  }
  ._198ihpdae {
    padding-right: var(--_1cye5q74);
  }
  ._198ihpdai {
    padding-right: var(--_1cye5q75);
  }
  ._198ihpdam {
    padding-right: var(--_1cye5q76);
  }
  ._198ihpdaq {
    padding-right: var(--_1cye5q77);
  }
  ._198ihpdau {
    padding-right: var(--_1cye5q78);
  }
  ._198ihpday {
    padding-right: 0;
  }
  ._198ihpdb2 {
    padding-left: var(--_1cye5q70);
  }
  ._198ihpdb6 {
    padding-left: var(--_1cye5q71);
  }
  ._198ihpdba {
    padding-left: var(--_1cye5q72);
  }
  ._198ihpdbe {
    padding-left: var(--_1cye5q73);
  }
  ._198ihpdbi {
    padding-left: var(--_1cye5q74);
  }
  ._198ihpdbm {
    padding-left: var(--_1cye5q75);
  }
  ._198ihpdbq {
    padding-left: var(--_1cye5q76);
  }
  ._198ihpdbu {
    padding-left: var(--_1cye5q77);
  }
  ._198ihpdby {
    padding-left: var(--_1cye5q78);
  }
  ._198ihpdc2 {
    padding-left: 0;
  }
  ._198ihpdc6 {
    margin-top: var(--_1cye5q70);
  }
  ._198ihpdca {
    margin-top: var(--_1cye5q71);
  }
  ._198ihpdce {
    margin-top: var(--_1cye5q72);
  }
  ._198ihpdci {
    margin-top: var(--_1cye5q73);
  }
  ._198ihpdcm {
    margin-top: var(--_1cye5q74);
  }
  ._198ihpdcq {
    margin-top: var(--_1cye5q75);
  }
  ._198ihpdcu {
    margin-top: var(--_1cye5q76);
  }
  ._198ihpdcy {
    margin-top: var(--_1cye5q77);
  }
  ._198ihpdd2 {
    margin-top: var(--_1cye5q78);
  }
  ._198ihpdd6 {
    margin-top: 0;
  }
  ._198ihpdda {
    margin-bottom: var(--_1cye5q70);
  }
  ._198ihpdde {
    margin-bottom: var(--_1cye5q71);
  }
  ._198ihpddi {
    margin-bottom: var(--_1cye5q72);
  }
  ._198ihpddm {
    margin-bottom: var(--_1cye5q73);
  }
  ._198ihpddq {
    margin-bottom: var(--_1cye5q74);
  }
  ._198ihpddu {
    margin-bottom: var(--_1cye5q75);
  }
  ._198ihpddy {
    margin-bottom: var(--_1cye5q76);
  }
  ._198ihpde2 {
    margin-bottom: var(--_1cye5q77);
  }
  ._198ihpde6 {
    margin-bottom: var(--_1cye5q78);
  }
  ._198ihpdea {
    margin-bottom: 0;
  }
  ._198ihpdee {
    margin-right: var(--_1cye5q70);
  }
  ._198ihpdei {
    margin-right: var(--_1cye5q71);
  }
  ._198ihpdem {
    margin-right: var(--_1cye5q72);
  }
  ._198ihpdeq {
    margin-right: var(--_1cye5q73);
  }
  ._198ihpdeu {
    margin-right: var(--_1cye5q74);
  }
  ._198ihpdey {
    margin-right: var(--_1cye5q75);
  }
  ._198ihpdf2 {
    margin-right: var(--_1cye5q76);
  }
  ._198ihpdf6 {
    margin-right: var(--_1cye5q77);
  }
  ._198ihpdfa {
    margin-right: var(--_1cye5q78);
  }
  ._198ihpdfe {
    margin-right: 0;
  }
  ._198ihpdfi {
    margin-left: var(--_1cye5q70);
  }
  ._198ihpdfm {
    margin-left: var(--_1cye5q71);
  }
  ._198ihpdfq {
    margin-left: var(--_1cye5q72);
  }
  ._198ihpdfu {
    margin-left: var(--_1cye5q73);
  }
  ._198ihpdfy {
    margin-left: var(--_1cye5q74);
  }
  ._198ihpdg2 {
    margin-left: var(--_1cye5q75);
  }
  ._198ihpdg6 {
    margin-left: var(--_1cye5q76);
  }
  ._198ihpdga {
    margin-left: var(--_1cye5q77);
  }
  ._198ihpdge {
    margin-left: var(--_1cye5q78);
  }
  ._198ihpdgi {
    margin-left: 0;
  }
  ._198ihpdgm {
    align-items: flex-start;
  }
  ._198ihpdgq {
    align-items: center;
  }
  ._198ihpdgu {
    align-items: flex-end;
  }
  ._198ihpdgy {
    justify-content: flex-start;
  }
  ._198ihpdh2 {
    justify-content: center;
  }
  ._198ihpdh6 {
    justify-content: flex-end;
  }
  ._198ihpdha {
    justify-content: space-between;
  }
  ._198ihpdhe {
    flex-direction: row;
  }
  ._198ihpdhi {
    flex-direction: row-reverse;
  }
  ._198ihpdhm {
    flex-direction: column;
  }
  ._198ihpdhq {
    flex-direction: column-reverse;
  }
  ._198ihpdhu {
    flex-wrap: wrap;
  }
  ._198ihpdhy {
    flex-wrap: nowrap;
  }
  ._198ihpdi2 {
    flex-shrink: 0;
  }
  ._198ihpdi6 {
    flex-grow: 0;
  }
  ._198ihpdia {
    flex-grow: 1;
  }
  ._198ihpdie {
    text-align: left;
  }
  ._198ihpdii {
    text-align: center;
  }
  ._198ihpdim {
    text-align: right;
  }
}
@media screen and (min-width: 1200px) {
  ._198ihpd4z {
    display: none;
  }
  ._198ihpd53 {
    display: block;
  }
  ._198ihpd57 {
    display: inline;
  }
  ._198ihpd5b {
    display: inline-block;
  }
  ._198ihpd5f {
    display: flex;
  }
  ._198ihpd5j {
    position: relative;
  }
  ._198ihpd5n {
    position: absolute;
  }
  ._198ihpd5r {
    position: fixed;
  }
  ._198ihpd5v {
    position: sticky;
  }
  ._198ihpd5z {
    border-radius: 0;
  }
  ._198ihpd63 {
    border-radius: 9999px;
  }
  ._198ihpd67 {
    border-radius: var(--_1cye5q7b);
  }
  ._198ihpd6b {
    border-radius: var(--_1cye5q7c);
  }
  ._198ihpd6f {
    border-radius: var(--_1cye5q7d);
  }
  ._198ihpd6j {
    border-radius: var(--_1cye5q7e);
  }
  ._198ihpd6n {
    gap: var(--_1cye5q70);
  }
  ._198ihpd6r {
    gap: var(--_1cye5q71);
  }
  ._198ihpd6v {
    gap: var(--_1cye5q72);
  }
  ._198ihpd6z {
    gap: var(--_1cye5q73);
  }
  ._198ihpd73 {
    gap: var(--_1cye5q74);
  }
  ._198ihpd77 {
    gap: var(--_1cye5q75);
  }
  ._198ihpd7b {
    gap: var(--_1cye5q76);
  }
  ._198ihpd7f {
    gap: var(--_1cye5q77);
  }
  ._198ihpd7j {
    gap: var(--_1cye5q78);
  }
  ._198ihpd7n {
    gap: 0;
  }
  ._198ihpd7r {
    padding-top: var(--_1cye5q70);
  }
  ._198ihpd7v {
    padding-top: var(--_1cye5q71);
  }
  ._198ihpd7z {
    padding-top: var(--_1cye5q72);
  }
  ._198ihpd83 {
    padding-top: var(--_1cye5q73);
  }
  ._198ihpd87 {
    padding-top: var(--_1cye5q74);
  }
  ._198ihpd8b {
    padding-top: var(--_1cye5q75);
  }
  ._198ihpd8f {
    padding-top: var(--_1cye5q76);
  }
  ._198ihpd8j {
    padding-top: var(--_1cye5q77);
  }
  ._198ihpd8n {
    padding-top: var(--_1cye5q78);
  }
  ._198ihpd8r {
    padding-top: 0;
  }
  ._198ihpd8v {
    padding-bottom: var(--_1cye5q70);
  }
  ._198ihpd8z {
    padding-bottom: var(--_1cye5q71);
  }
  ._198ihpd93 {
    padding-bottom: var(--_1cye5q72);
  }
  ._198ihpd97 {
    padding-bottom: var(--_1cye5q73);
  }
  ._198ihpd9b {
    padding-bottom: var(--_1cye5q74);
  }
  ._198ihpd9f {
    padding-bottom: var(--_1cye5q75);
  }
  ._198ihpd9j {
    padding-bottom: var(--_1cye5q76);
  }
  ._198ihpd9n {
    padding-bottom: var(--_1cye5q77);
  }
  ._198ihpd9r {
    padding-bottom: var(--_1cye5q78);
  }
  ._198ihpd9v {
    padding-bottom: 0;
  }
  ._198ihpd9z {
    padding-right: var(--_1cye5q70);
  }
  ._198ihpda3 {
    padding-right: var(--_1cye5q71);
  }
  ._198ihpda7 {
    padding-right: var(--_1cye5q72);
  }
  ._198ihpdab {
    padding-right: var(--_1cye5q73);
  }
  ._198ihpdaf {
    padding-right: var(--_1cye5q74);
  }
  ._198ihpdaj {
    padding-right: var(--_1cye5q75);
  }
  ._198ihpdan {
    padding-right: var(--_1cye5q76);
  }
  ._198ihpdar {
    padding-right: var(--_1cye5q77);
  }
  ._198ihpdav {
    padding-right: var(--_1cye5q78);
  }
  ._198ihpdaz {
    padding-right: 0;
  }
  ._198ihpdb3 {
    padding-left: var(--_1cye5q70);
  }
  ._198ihpdb7 {
    padding-left: var(--_1cye5q71);
  }
  ._198ihpdbb {
    padding-left: var(--_1cye5q72);
  }
  ._198ihpdbf {
    padding-left: var(--_1cye5q73);
  }
  ._198ihpdbj {
    padding-left: var(--_1cye5q74);
  }
  ._198ihpdbn {
    padding-left: var(--_1cye5q75);
  }
  ._198ihpdbr {
    padding-left: var(--_1cye5q76);
  }
  ._198ihpdbv {
    padding-left: var(--_1cye5q77);
  }
  ._198ihpdbz {
    padding-left: var(--_1cye5q78);
  }
  ._198ihpdc3 {
    padding-left: 0;
  }
  ._198ihpdc7 {
    margin-top: var(--_1cye5q70);
  }
  ._198ihpdcb {
    margin-top: var(--_1cye5q71);
  }
  ._198ihpdcf {
    margin-top: var(--_1cye5q72);
  }
  ._198ihpdcj {
    margin-top: var(--_1cye5q73);
  }
  ._198ihpdcn {
    margin-top: var(--_1cye5q74);
  }
  ._198ihpdcr {
    margin-top: var(--_1cye5q75);
  }
  ._198ihpdcv {
    margin-top: var(--_1cye5q76);
  }
  ._198ihpdcz {
    margin-top: var(--_1cye5q77);
  }
  ._198ihpdd3 {
    margin-top: var(--_1cye5q78);
  }
  ._198ihpdd7 {
    margin-top: 0;
  }
  ._198ihpddb {
    margin-bottom: var(--_1cye5q70);
  }
  ._198ihpddf {
    margin-bottom: var(--_1cye5q71);
  }
  ._198ihpddj {
    margin-bottom: var(--_1cye5q72);
  }
  ._198ihpddn {
    margin-bottom: var(--_1cye5q73);
  }
  ._198ihpddr {
    margin-bottom: var(--_1cye5q74);
  }
  ._198ihpddv {
    margin-bottom: var(--_1cye5q75);
  }
  ._198ihpddz {
    margin-bottom: var(--_1cye5q76);
  }
  ._198ihpde3 {
    margin-bottom: var(--_1cye5q77);
  }
  ._198ihpde7 {
    margin-bottom: var(--_1cye5q78);
  }
  ._198ihpdeb {
    margin-bottom: 0;
  }
  ._198ihpdef {
    margin-right: var(--_1cye5q70);
  }
  ._198ihpdej {
    margin-right: var(--_1cye5q71);
  }
  ._198ihpden {
    margin-right: var(--_1cye5q72);
  }
  ._198ihpder {
    margin-right: var(--_1cye5q73);
  }
  ._198ihpdev {
    margin-right: var(--_1cye5q74);
  }
  ._198ihpdez {
    margin-right: var(--_1cye5q75);
  }
  ._198ihpdf3 {
    margin-right: var(--_1cye5q76);
  }
  ._198ihpdf7 {
    margin-right: var(--_1cye5q77);
  }
  ._198ihpdfb {
    margin-right: var(--_1cye5q78);
  }
  ._198ihpdff {
    margin-right: 0;
  }
  ._198ihpdfj {
    margin-left: var(--_1cye5q70);
  }
  ._198ihpdfn {
    margin-left: var(--_1cye5q71);
  }
  ._198ihpdfr {
    margin-left: var(--_1cye5q72);
  }
  ._198ihpdfv {
    margin-left: var(--_1cye5q73);
  }
  ._198ihpdfz {
    margin-left: var(--_1cye5q74);
  }
  ._198ihpdg3 {
    margin-left: var(--_1cye5q75);
  }
  ._198ihpdg7 {
    margin-left: var(--_1cye5q76);
  }
  ._198ihpdgb {
    margin-left: var(--_1cye5q77);
  }
  ._198ihpdgf {
    margin-left: var(--_1cye5q78);
  }
  ._198ihpdgj {
    margin-left: 0;
  }
  ._198ihpdgn {
    align-items: flex-start;
  }
  ._198ihpdgr {
    align-items: center;
  }
  ._198ihpdgv {
    align-items: flex-end;
  }
  ._198ihpdgz {
    justify-content: flex-start;
  }
  ._198ihpdh3 {
    justify-content: center;
  }
  ._198ihpdh7 {
    justify-content: flex-end;
  }
  ._198ihpdhb {
    justify-content: space-between;
  }
  ._198ihpdhf {
    flex-direction: row;
  }
  ._198ihpdhj {
    flex-direction: row-reverse;
  }
  ._198ihpdhn {
    flex-direction: column;
  }
  ._198ihpdhr {
    flex-direction: column-reverse;
  }
  ._198ihpdhv {
    flex-wrap: wrap;
  }
  ._198ihpdhz {
    flex-wrap: nowrap;
  }
  ._198ihpdi3 {
    flex-shrink: 0;
  }
  ._198ihpdi7 {
    flex-grow: 0;
  }
  ._198ihpdib {
    flex-grow: 1;
  }
  ._198ihpdif {
    text-align: left;
  }
  ._198ihpdij {
    text-align: center;
  }
  ._198ihpdin {
    text-align: right;
  }
}
._9ujh390 {
  --_1cye5q70: 24px;
  --_1cye5q71: 8px;
  --_1cye5q72: 12px;
  --_1cye5q73: 16px;
  --_1cye5q74: 24px;
  --_1cye5q75: 32px;
  --_1cye5q76: 48px;
  --_1cye5q77: 64px;
  --_1cye5q78: 96px;
  --_1cye5q79: 48px;
  --_1cye5q7a: 4px;
  --_1cye5q7b: 4px;
  --_1cye5q7c: 8px;
  --_1cye5q7d: 16px;
  --_1cye5q7e: 24px;
  --_1cye5q7f: #e60278;
  --_1cye5q7g: #f8b1dc;
  --_1cye5q7h: #fdc221;
  --_1cye5q7i: #fee384;
  --_1cye5q7j: #b91e1e;
  --_1cye5q7k: #fb999a;
  --_1cye5q7l: #838fa5;
  --_1cye5q7m: rgba(153, 191, 247, 0.7);
  --_1cye5q7n: #1e47a9;
  --_1cye5q7o: #99bff7;
  --_1cye5q7p: #1d559d;
  --_1cye5q7q: #98c9f1;
  --_1cye5q7r: #2e3849;
  --_1cye5q7t: #eaecf1;
  --_1cye5q7s: #fff;
  --_1cye5q7u: #12784f;
  --_1cye5q7v: #8bdec5;
  --_1cye5q7w: #7f35a9;
  --_1cye5q7x: #e1b2f5;
  --_1cye5q7y: 2px;
  --_1cye5q7z: 4px;
  --_1cye5q710: 6px;
  --_1cye5q711: 400px;
  --_1cye5q712: 660px;
  --_1cye5q713: 940px;
  --_1cye5q714: 1280px;
  --_1cye5q715: #e60278;
  --_1cye5q716: #f8b1dc;
  --_1cye5q717: #723d02;
  --_1cye5q718: #fee384;
  --_1cye5q719: #b91e1e;
  --_1cye5q71a: #fb999a;
  --_1cye5q71b: #1e47a9;
  --_1cye5q71c: #99bff7;
  --_1cye5q71d: #1d559d;
  --_1cye5q71e: #98c9f1;
  --_1cye5q71f: #2e3849;
  --_1cye5q71h: #fff;
  --_1cye5q71g: #2e3849;
  --_1cye5q71i: #5b2084;
  --_1cye5q71j: #f0d6fa;
  --_1cye5q71k: #2e3849;
  --_1cye5q71l: #fff;
  --_1cye5q71m: #12784f;
  --_1cye5q71n: #8bdec5;
  --_1cye5q71o: #7f35a9;
  --_1cye5q71p: #e1b2f5;
  --_1cye5q71q: #e60278;
  --_1cye5q71r: #5a6881;
  --_1cye5q71s: hsla(0, 0%, 100%, 0.65);
  --_1cye5q71t: #fff;
  --_1cye5q71u: #1c2330;
  --_1cye5q71v: #051a49;
  --_1cye5q71w: #e60278;
  --_1cye5q71x: #cd026b;
  --_1cye5q71y: #fd0585;
  --_1cye5q71z: #feeffa;
  --_1cye5q720: #fdd7f3;
  --_1cye5q721: #fde3f6;
  --_1cye5q722: #fdc221;
  --_1cye5q723: #fef8de;
  --_1cye5q724: #b91e1e;
  --_1cye5q725: #a31a1a;
  --_1cye5q726: #db1616;
  --_1cye5q727: #ffe3e2;
  --_1cye5q728: #fef3f3;
  --_1cye5q729: #fcdbdb;
  --_1cye5q72a: #fde7e7;
  --_1cye5q72b: #1e47a9;
  --_1cye5q72c: #1a3e93;
  --_1cye5q72d: #2455c9;
  --_1cye5q72e: #f0f7fe;
  --_1cye5q72f: #d8eafc;
  --_1cye5q72g: #e4f1fd;
  --_1cye5q72h: #1d559d;
  --_1cye5q72i: #e3f2fb;
  --_1cye5q72j: #2e3849;
  --_1cye5q72k: #242c39;
  --_1cye5q72l: #384459;
  --_1cye5q72m: #f3f5f7;
  --_1cye5q72n: #f3f5f7;
  --_1cye5q72o: #e4e8ed;
  --_1cye5q72p: #ebeff2;
  --_1cye5q72q: #12784f;
  --_1cye5q72r: #e2f7f1;
  --_1cye5q72s: #7f35a9;
  --_1cye5q72t: #f9ebfd;
  --_1cye5q72u: #fff;
  --_1cye5q72v: #1c2330;
  --_1cye5q72w: SeekSans, "SeekSans Fallback", Arial, Tahoma, sans-serif;
  --_1cye5q72x: 783;
  --_1cye5q72y: 1057;
  --_1cye5q72z: -274;
  --_1cye5q730: 0;
  --_1cye5q731: 1000;
  --_1cye5q73w: 18px;
  --_1cye5q73x: 27.094px;
  --_1cye5q73y: 14.094px;
  --_1cye5q73z: -0.3611em;
  --_1cye5q740: -0.3611em;
  --_1cye5q741: 18px;
  --_1cye5q742: 27.094px;
  --_1cye5q743: 14.094px;
  --_1cye5q744: -0.3611em;
  --_1cye5q745: -0.3611em;
  --_1cye5q73m: 16px;
  --_1cye5q73n: 24.528px;
  --_1cye5q73o: 12.528px;
  --_1cye5q73p: -0.375em;
  --_1cye5q73q: -0.375em;
  --_1cye5q73r: 16px;
  --_1cye5q73s: 24.528px;
  --_1cye5q73t: 12.528px;
  --_1cye5q73u: -0.375em;
  --_1cye5q73v: -0.375em;
  --_1cye5q73c: 14px;
  --_1cye5q73d: 20.962px;
  --_1cye5q73e: 10.962px;
  --_1cye5q73f: -0.3571em;
  --_1cye5q73g: -0.3571em;
  --_1cye5q73h: 14px;
  --_1cye5q73i: 20.962px;
  --_1cye5q73j: 10.962px;
  --_1cye5q73k: -0.3571em;
  --_1cye5q73l: -0.3571em;
  --_1cye5q732: 12px;
  --_1cye5q733: 18.396px;
  --_1cye5q734: 9.396px;
  --_1cye5q735: -0.375em;
  --_1cye5q736: -0.375em;
  --_1cye5q737: 12px;
  --_1cye5q738: 18.396px;
  --_1cye5q739: 9.396px;
  --_1cye5q73a: -0.375em;
  --_1cye5q73b: -0.375em;
  --_1cye5q746: 400;
  --_1cye5q747: 600;
  --_1cye5q748: 700;
  --_1cye5q749: 28px;
  --_1cye5q74a: 32.924px;
  --_1cye5q74b: 21.924px;
  --_1cye5q74c: -0.1964em;
  --_1cye5q74d: -0.1964em;
  --_1cye5q74e: 36px;
  --_1cye5q74f: 42.188px;
  --_1cye5q74g: 28.188px;
  --_1cye5q74h: -0.1944em;
  --_1cye5q74i: -0.1944em;
  --_1cye5q74j: 24px;
  --_1cye5q74k: 29.792px;
  --_1cye5q74l: 18.792px;
  --_1cye5q74m: -0.2292em;
  --_1cye5q74n: -0.2292em;
  --_1cye5q74o: 30px;
  --_1cye5q74p: 36.49px;
  --_1cye5q74q: 23.49px;
  --_1cye5q74r: -0.2167em;
  --_1cye5q74s: -0.2167em;
  --_1cye5q74t: 22px;
  --_1cye5q74u: 27.226px;
  --_1cye5q74v: 17.226px;
  --_1cye5q74w: -0.2273em;
  --_1cye5q74x: -0.2273em;
  --_1cye5q74y: 24px;
  --_1cye5q74z: 29.792px;
  --_1cye5q750: 18.792px;
  --_1cye5q751: -0.2292em;
  --_1cye5q752: -0.2292em;
  --_1cye5q753: 20px;
  --_1cye5q754: 24.66px;
  --_1cye5q755: 15.66px;
  --_1cye5q756: -0.225em;
  --_1cye5q757: -0.225em;
  --_1cye5q758: 20px;
  --_1cye5q759: 24.66px;
  --_1cye5q75a: 15.66px;
  --_1cye5q75b: -0.225em;
  --_1cye5q75c: -0.225em;
  --_1cye5q75d: 400;
  --_1cye5q75e: 600;
  --_1cye5q75f: underline;
  --_1cye5q75g: 24px;
  --_1cye5q75h: 20px;
  --_1cye5q75i: transform 0.125s ease, opacity 0.125s ease;
  --_1cye5q75j: transform 0.2s cubic-bezier(0.02, 1.505, 0.745, 1.235);
  --_1cye5q75k: scale(0.95);
  --_1cye5q75l:
    0 0 4px 0 rgba(28, 35, 48, 0.08), 0 4px 8px -2px rgba(28, 35, 48, 0.08);
  --_1cye5q75m:
    0 0 8px 0 rgba(28, 35, 48, 0.08), 0 8px 16px -4px rgba(28, 35, 48, 0.08);
  --_1cye5q75n:
    0 0 12px 0 rgba(28, 35, 48, 0.08), 0 12px 24px -6px rgba(28, 35, 48, 0.08);
}
.e739tz4 {
  font-size: var(--e739tz0);
  line-height: var(--e739tz1);
}
.e739tz4:before {
  content: "";
  display: table;
  margin-bottom: var(--e739tz2);
}
.e739tz4:after {
  content: "";
  display: table;
  margin-top: var(--e739tz3);
}
.qasje90 {
  font-family: var(--_1cye5q72w);
}
.qasje91 {
  font-weight: var(--_1cye5q746);
}
.qasje92 {
  font-weight: var(--_1cye5q747);
}
.qasje93 {
  font-weight: var(--_1cye5q748);
}
.qasje94 {
  --e739tz0: var(--_1cye5q732);
  --e739tz1: var(--_1cye5q733);
  --e739tz2: var(--_1cye5q735);
  --e739tz3: var(--_1cye5q736);
}
.qasje96 {
  --e739tz0: var(--_1cye5q73c);
  --e739tz1: var(--_1cye5q73d);
  --e739tz2: var(--_1cye5q73f);
  --e739tz3: var(--_1cye5q73g);
}
.qasje98 {
  --e739tz0: var(--_1cye5q73m);
  --e739tz1: var(--_1cye5q73n);
  --e739tz2: var(--_1cye5q73p);
  --e739tz3: var(--_1cye5q73q);
}
.qasje9a {
  --e739tz0: var(--_1cye5q73w);
  --e739tz1: var(--_1cye5q73x);
  --e739tz2: var(--_1cye5q73z);
  --e739tz3: var(--_1cye5q740);
}
.qasje9c {
  font-size: var(--_1cye5q732);
  line-height: var(--_1cye5q733);
}
.qasje9d {
  font-size: var(--_1cye5q73c);
  line-height: var(--_1cye5q73d);
}
.qasje9e {
  font-size: var(--_1cye5q73m);
  line-height: var(--_1cye5q73n);
}
.qasje9f {
  font-size: var(--_1cye5q73w);
  line-height: var(--_1cye5q73x);
}
.qasje9g {
  font-weight: var(--_1cye5q75d);
}
.qasje9h {
  font-weight: var(--_1cye5q75e);
}
.qasje9i {
  --e739tz0: var(--_1cye5q749);
  --e739tz1: var(--_1cye5q74a);
  --e739tz2: var(--_1cye5q74c);
  --e739tz3: var(--_1cye5q74d);
}
.qasje9k {
  --e739tz0: var(--_1cye5q74j);
  --e739tz1: var(--_1cye5q74k);
  --e739tz2: var(--_1cye5q74m);
  --e739tz3: var(--_1cye5q74n);
}
.qasje9m {
  --e739tz0: var(--_1cye5q74t);
  --e739tz1: var(--_1cye5q74u);
  --e739tz2: var(--_1cye5q74w);
  --e739tz3: var(--_1cye5q74x);
}
.qasje9o {
  --e739tz0: var(--_1cye5q753);
  --e739tz1: var(--_1cye5q754);
  --e739tz2: var(--_1cye5q756);
  --e739tz3: var(--_1cye5q757);
}
html:not(._198ihpd11) .qasje910 {
  --qasje9q: var(--_1cye5q719);
  --qasje9r: var(--_1cye5q717);
  --qasje9s: var(--_1cye5q71d);
  --qasje9t: var(--_1cye5q71o);
  --qasje9u: var(--_1cye5q71m);
  --qasje9v: var(--_1cye5q715);
  --qasje9w: var(--_1cye5q71b);
  --qasje9x: var(--_1cye5q71k);
  --qasje9y: var(--_1cye5q71r);
  --qasje9z: var(--_1cye5q71f);
}
html:not(._198ihpd11) .qasje911 {
  --qasje9q: var(--_1cye5q71a);
  --qasje9r: var(--_1cye5q718);
  --qasje9s: var(--_1cye5q71e);
  --qasje9t: var(--_1cye5q71p);
  --qasje9u: var(--_1cye5q71n);
  --qasje9v: var(--_1cye5q716);
  --qasje9w: var(--_1cye5q71c);
  --qasje9x: var(--_1cye5q71l);
  --qasje9y: var(--_1cye5q71s);
  --qasje9z: var(--_1cye5q71h);
}
html._198ihpd11 .qasje912 {
  --qasje9q: var(--_1cye5q719);
  --qasje9r: var(--_1cye5q717);
  --qasje9s: var(--_1cye5q71d);
  --qasje9t: var(--_1cye5q71o);
  --qasje9u: var(--_1cye5q71m);
  --qasje9v: var(--_1cye5q715);
  --qasje9w: var(--_1cye5q71b);
  --qasje9x: var(--_1cye5q71k);
  --qasje9y: var(--_1cye5q71r);
  --qasje9z: var(--_1cye5q71f);
}
html._198ihpd11 .qasje913 {
  --qasje9q: var(--_1cye5q71a);
  --qasje9r: var(--_1cye5q718);
  --qasje9s: var(--_1cye5q71e);
  --qasje9t: var(--_1cye5q71p);
  --qasje9u: var(--_1cye5q71n);
  --qasje9v: var(--_1cye5q716);
  --qasje9w: var(--_1cye5q71c);
  --qasje9x: var(--_1cye5q71l);
  --qasje9y: var(--_1cye5q71s);
  --qasje9z: var(--_1cye5q71h);
}
html:not(._198ihpd11) .qasje914,
html:not(._198ihpd11) .qasje915,
html:not(._198ihpd11) .qasje916,
html:not(._198ihpd11) .qasje917 {
  --qasje9x: var(--qasje9q);
}
html:not(._198ihpd11) .qasje918,
html:not(._198ihpd11) .qasje919 {
  --qasje9x: var(--qasje9r);
}
html:not(._198ihpd11) .qasje91a {
  --qasje9x: var(--qasje9u);
}
html:not(._198ihpd11) .qasje91b {
  --qasje9x: var(--qasje9s);
}
html:not(._198ihpd11) .qasje91c {
  --qasje9x: var(--qasje9t);
}
html._198ihpd11 .qasje91d,
html._198ihpd11 .qasje91e,
html._198ihpd11 .qasje91f,
html._198ihpd11 .qasje91g {
  --qasje9x: var(--qasje9q);
}
html._198ihpd11 .qasje91h,
html._198ihpd11 .qasje91i {
  --qasje9x: var(--qasje9r);
}
html._198ihpd11 .qasje91j {
  --qasje9x: var(--qasje9u);
}
html._198ihpd11 .qasje91k {
  --qasje9x: var(--qasje9s);
}
html._198ihpd11 .qasje91l {
  --qasje9x: var(--qasje9t);
}
.qasje91m {
  color: var(--qasje9q);
}
.qasje91n {
  color: var(--qasje9r);
}
.qasje91o {
  color: var(--qasje9s);
}
.qasje91p {
  color: var(--qasje9t);
}
.qasje91q {
  color: var(--qasje9u);
}
.qasje91r {
  color: var(--qasje9v);
}
.qasje91s {
  color: var(--qasje9w);
}
.qasje91t {
  color: var(--qasje9x);
}
.qasje91u {
  color: var(--qasje9y);
}
.qasje91v {
  color: var(--qasje9z);
}
.qasje91w {
  padding-bottom: calc((var(--_1cye5q79) - var(--_1cye5q733)) / 2);
  padding-top: calc((var(--_1cye5q79) - var(--_1cye5q733)) / 2);
}
.qasje91x {
  padding-bottom: calc((var(--_1cye5q79) - var(--_1cye5q73d)) / 2);
  padding-top: calc((var(--_1cye5q79) - var(--_1cye5q73d)) / 2);
}
.qasje91y {
  padding-bottom: calc((var(--_1cye5q79) - var(--_1cye5q73n)) / 2);
  padding-top: calc((var(--_1cye5q79) - var(--_1cye5q73n)) / 2);
}
.qasje91z {
  padding-bottom: calc((var(--_1cye5q79) - var(--_1cye5q73x)) / 2);
  padding-top: calc((var(--_1cye5q79) - var(--_1cye5q73x)) / 2);
}
@media screen and (min-width: 740px) {
  .qasje94 {
    --e739tz0: var(--_1cye5q737);
    --e739tz1: var(--_1cye5q738);
    --e739tz2: var(--_1cye5q73a);
    --e739tz3: var(--_1cye5q73b);
  }
  .qasje96 {
    --e739tz0: var(--_1cye5q73h);
    --e739tz1: var(--_1cye5q73i);
    --e739tz2: var(--_1cye5q73k);
    --e739tz3: var(--_1cye5q73l);
  }
  .qasje98 {
    --e739tz0: var(--_1cye5q73r);
    --e739tz1: var(--_1cye5q73s);
    --e739tz2: var(--_1cye5q73u);
    --e739tz3: var(--_1cye5q73v);
  }
  .qasje9a {
    --e739tz0: var(--_1cye5q741);
    --e739tz1: var(--_1cye5q742);
    --e739tz2: var(--_1cye5q744);
    --e739tz3: var(--_1cye5q745);
  }
  .qasje9c {
    font-size: var(--_1cye5q737);
    line-height: var(--_1cye5q738);
  }
  .qasje9d {
    font-size: var(--_1cye5q73h);
    line-height: var(--_1cye5q73i);
  }
  .qasje9e {
    font-size: var(--_1cye5q73r);
    line-height: var(--_1cye5q73s);
  }
  .qasje9f {
    font-size: var(--_1cye5q741);
    line-height: var(--_1cye5q742);
  }
  .qasje9i {
    --e739tz0: var(--_1cye5q74e);
    --e739tz1: var(--_1cye5q74f);
    --e739tz2: var(--_1cye5q74h);
    --e739tz3: var(--_1cye5q74i);
  }
  .qasje9k {
    --e739tz0: var(--_1cye5q74o);
    --e739tz1: var(--_1cye5q74p);
    --e739tz2: var(--_1cye5q74r);
    --e739tz3: var(--_1cye5q74s);
  }
  .qasje9m {
    --e739tz0: var(--_1cye5q74y);
    --e739tz1: var(--_1cye5q74z);
    --e739tz2: var(--_1cye5q751);
    --e739tz3: var(--_1cye5q752);
  }
  .qasje9o {
    --e739tz0: var(--_1cye5q758);
    --e739tz1: var(--_1cye5q759);
    --e739tz2: var(--_1cye5q75b);
    --e739tz3: var(--_1cye5q75c);
  }
  .qasje91w {
    padding-bottom: calc((var(--_1cye5q79) - var(--_1cye5q738)) / 2);
    padding-top: calc((var(--_1cye5q79) - var(--_1cye5q738)) / 2);
  }
  .qasje91x {
    padding-bottom: calc((var(--_1cye5q79) - var(--_1cye5q73i)) / 2);
    padding-top: calc((var(--_1cye5q79) - var(--_1cye5q73i)) / 2);
  }
  .qasje91y {
    padding-bottom: calc((var(--_1cye5q79) - var(--_1cye5q73s)) / 2);
    padding-top: calc((var(--_1cye5q79) - var(--_1cye5q73s)) / 2);
  }
  .qasje91z {
    padding-bottom: calc((var(--_1cye5q79) - var(--_1cye5q742)) / 2);
    padding-top: calc((var(--_1cye5q79) - var(--_1cye5q742)) / 2);
  }
}
._1s4vvo56 {
  background: var(--_1s4vvo50);
}
._1s4vvo57 {
  background: var(--_1s4vvo51);
}
._1s4vvo58 {
  background: var(--_1s4vvo52);
}
._1s4vvo59 {
  background: var(--_1s4vvo53);
}
._1s4vvo5a {
  background: var(--_1s4vvo54);
}
._1s4vvo5b {
  background: var(--_1s4vvo55);
}
html:not(._198ihpd11) ._1s4vvo5c {
  --_1s4vvo50: var(--_1cye5q7w);
  --_1s4vvo51: var(--_1cye5q7p);
  --_1s4vvo52: var(--_1cye5q7u);
  --_1s4vvo53: var(--_1cye5q7h);
  --_1s4vvo54: var(--_1cye5q7j);
  --_1s4vvo55: var(--_1cye5q7n);
}
html:not(._198ihpd11) ._1s4vvo5d {
  --_1s4vvo50: var(--_1cye5q7x);
  --_1s4vvo51: var(--_1cye5q7q);
  --_1s4vvo52: var(--_1cye5q7v);
  --_1s4vvo53: var(--_1cye5q7i);
  --_1s4vvo54: var(--_1cye5q7k);
  --_1s4vvo55: var(--_1cye5q7o);
}
html._198ihpd11 ._1s4vvo5e {
  --_1s4vvo50: var(--_1cye5q7w);
  --_1s4vvo51: var(--_1cye5q7p);
  --_1s4vvo52: var(--_1cye5q7u);
  --_1s4vvo53: var(--_1cye5q7h);
  --_1s4vvo54: var(--_1cye5q7j);
  --_1s4vvo55: var(--_1cye5q7n);
}
html._198ihpd11 ._1s4vvo5f {
  --_1s4vvo50: var(--_1cye5q7x);
  --_1s4vvo51: var(--_1cye5q7q);
  --_1s4vvo52: var(--_1cye5q7v);
  --_1s4vvo53: var(--_1cye5q7i);
  --_1s4vvo54: var(--_1cye5q7k);
  --_1s4vvo55: var(--_1cye5q7o);
}
._1s4vvo5g {
  border-bottom-right-radius: 0 !important;
  border-top-right-radius: 0 !important;
}
._1s4vvo5h {
  width: var(--_1cye5q7e);
}
._1s4vvo5i {
  width: var(--_1cye5q7a);
}
.aow2ce0 {
  margin-bottom: -0.1em;
}
.aow2ce2 {
  overflow-wrap: break-word;
  text-overflow: ellipsis;
  white-space: nowrap;
}
.aow2ce0 .aow2ce2 {
  padding-bottom: 0.1em;
}
@supports (display: -webkit-box) and (-webkit-line-clamp: 1) {
  .aow2ce4 {
    display: -webkit-box;
    -webkit-line-clamp: var(--aow2ce3);
    white-space: normal;
    -webkit-box-orient: vertical;
  }
}
,
  "main.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "main.js.LICENSE.txt": /**
 * @license React
 * react-dom-client.production.js
 *
 * Copyright (c) Meta Platforms, Inc. and affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */

/**
 * @license React
 * react-dom.production.js
 *
 * Copyright (c) Meta Platforms, Inc. and affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */

/**
 * @license React
 * react-jsx-runtime.production.js
 *
 * Copyright (c) Meta Platforms, Inc. and affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */

/**
 * @license React
 * react.production.js
 *
 * Copyright (c) Meta Platforms, Inc. and affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */

/**
 * @license React
 * scheduler.production.js
 *
 * Copyright (c) Meta Platforms, Inc. and affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */
,
}
`;

exports[`sku-webpack-plugin > start > should start a development server 1`] = `
===================================================================
--- sourceHtml
+++ clientHtml
@@ -1,24 +1,37 @@
 <!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
     <title>
       Webpack App
     </title>
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1"
     >
     <script
       defer
       src="main.js"
     >
     </script>
     <link
       href="main.css"
       rel="stylesheet"
     >
   </head>
   <body>
+    <div>
+      <style type="text/css">
+        html,body{margin:0;padding:0;background:#fff}
+            html.sprinkles_darkMode__198ihpd11,html.sprinkles_darkMode__198ihpd11 body{color-scheme:dark;background:#1C2330}
+      </style>
+      <div class="seekJobs_seekJobs__9ujh390 typography_lightModeTone_light__qasje910 typography_darkModeTone_dark__qasje913">
+        <div class="reset_base__1syqt8p0 sprinkles_paddingBottom_gutter_mobile__198ihpd8s sprinkles_paddingTop_gutter_mobile__198ihpd7o sprinkles_paddingLeft_gutter_mobile__198ihpdb0 sprinkles_paddingRight_gutter_mobile__198ihpd9w sprinkles_position_relative_mobile__198ihpd5g sprinkles_borderRadius_large_mobile__198ihpd6c sprinkles_textAlign_left_mobile__198ihpdic sprinkles_boxShadow_borderNeutralLight_lightMode__198ihpd4k sprinkles_boxShadow_borderNeutral_darkMode__198ihpd4d typography_lightModeTone_light__qasje910 typography_darkModeTone_dark__qasje913 sprinkles_background_surface_lightMode__198ihpd34 sprinkles_background_surfaceDark_darkMode__198ihpd37">
+          <span class="reset_base__1syqt8p0 sprinkles_display_block_mobile__198ihpd50 typography_fontFamily__qasje90 typography_fontWeight_regular__qasje91 typography_tone_neutral__qasje91t typography_textSize_large__qasje9a capsize_capsizeStyle__e739tz4">
+            Is it working?
+          </span>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
\\ No newline at end of file
`;
